Fix: binarización sin FutureWarning + ejecutar notebook

--- a/TelecomX_LATAM.ipynb
+++ b/TelecomX_LATAM.ipynb
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "7eade520",
    "metadata": {
     "execution": {
@@ -971,133 +971,39 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_12138/3308754956.py:8: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  .replace({'Yes':1,'No':0,'':np.nan})\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cargos_mensuales</th>\n",
-       "      <th>cuentas_diarias</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3611</th>\n",
-       "      <td>20.85</td>\n",
-       "      <td>0.695000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1358</th>\n",
-       "      <td>20.40</td>\n",
-       "      <td>0.680000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>569</th>\n",
-       "      <td>99.00</td>\n",
-       "      <td>3.300000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2401</th>\n",
-       "      <td>54.10</td>\n",
-       "      <td>1.803333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6448</th>\n",
-       "      <td>86.45</td>\n",
-       "      <td>2.881667</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      cargos_mensuales  cuentas_diarias\n",
-       "3611             20.85         0.695000\n",
-       "1358             20.40         0.680000\n",
-       "569              99.00         3.300000\n",
-       "2401             54.10         1.803333\n",
-       "6448             86.45         2.881667"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 7256 entries, 0 to 7266\n",
-      "Data columns (total 22 columns):\n",
-      " #   Column                  Non-Null Count  Dtype  \n",
-      "---  ------                  --------------  -----  \n",
-      " 0   id_cliente              7256 non-null   object \n",
-      " 1   abandono                7256 non-null   int64  \n",
-      " 2   genero                  7256 non-null   object \n",
-      " 3   es_ciudadano_senior     7256 non-null   int64  \n",
-      " 4   tiene_pareja            7256 non-null   int64  \n",
-      " 5   tiene_dependientes      7256 non-null   int64  \n",
-      " 6   meses_en_empresa        7256 non-null   int8   \n",
-      " 7   servicio_telefonico     7256 non-null   int64  \n",
-      " 8   lineas_multiples        7256 non-null   object \n",
-      " 9   tipo_internet           7256 non-null   object \n",
-      " 10  seguridad_online        7256 non-null   object \n",
-      " 11  respaldo_online         7256 non-null   object \n",
-      " 12  proteccion_dispositivo  7256 non-null   object \n",
-      " 13  soporte_tecnico         7256 non-null   object \n",
-      " 14  tv_streaming            7256 non-null   object \n",
-      " 15  peliculas_streaming     7256 non-null   object \n",
-      " 16  tipo_contrato           7256 non-null   object \n",
-      " 17  factura_electronica     7256 non-null   int64  \n",
-      " 18  metodo_pago             7256 non-null   object \n",
-      " 19  cargos_mensuales        7256 non-null   float64\n",
-      " 20  cargos_totales          7256 non-null   float64\n",
-      " 21  cuentas_diarias         7256 non-null   float64\n",
-      "dtypes: float64(3), int64(6), int8(1), object(12)\n",
-      "memory usage: 1.2+ MB\n"
+      "Data columns (total 5 columns):\n",
+      " #   Column               Non-Null Count  Dtype\n",
+      "---  ------               --------------  -----\n",
+      " 0   abandono             7256 non-null   int64\n",
+      " 1   tiene_pareja         7256 non-null   int64\n",
+      " 2   tiene_dependientes   7256 non-null   int64\n",
+      " 3   servicio_telefonico  7256 non-null   int64\n",
+      " 4   factura_electronica  7256 non-null   int64\n",
+      "dtypes: int64(5)\n",
+      "memory usage: 340.1 KB\n"
      ]
     }
    ],
    "source": [
-    "# Binarias frecuentes\n",
     "col_binario = ['abandono','tiene_pareja','tiene_dependientes','servicio_telefonico','factura_electronica']\n",
+    "\n",
+    "# Normaliza a texto y binariza columna por columna (explícito = sin warning)\n",
     "for c in col_binario:\n",
-    "    if c in telecom_df.columns:\n",
-    "        telecom_df[c] = telecom_df[c].astype(str).str.strip().str.title()\n",
+    "    telecom_df[c] = (\n",
+    "        telecom_df[c]\n",
+    "        .astype('string')        # asegura tipo texto\n",
+    "        .str.strip().str.lower() # normaliza\n",
+    "        .map({'yes': 1, 'no': 0})# mapea a binario\n",
+    "        .fillna(0)               # trata '', NaN, etc.\n",
+    "        .astype('int64')         # tipo final explícito\n",
+    "    )\n",
     "\n",
-    "telecom_df[col_binario] = (telecom_df[col_binario]\n",
-    "                           .replace({'Yes':1,'No':0,'':np.nan})\n",
-    "                           .fillna(0)\n",
-    "                           .astype(int))\n",
-    "\n",
-    "# Nueva columna: prorrateo a valor diario\n",
-    "telecom_df['cuentas_diarias'] = telecom_df['cargos_mensuales'] / 30.0\n",
-    "\n",
-    "display(telecom_df[['cargos_mensuales','cuentas_diarias']].sample(5))\n",
-    "telecom_df.info()\n"
+    "telecom_df[col_binario].info()\n"
    ]
   },
   {
