Fix: tema de gráficos (import matplotlib as mpl) y outputs actualizados

--- a/TelecomX_Parte2_ML.ipynb
+++ b/TelecomX_Parte2_ML.ipynb
@@ -15,6 +15,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a758f8fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tema y paleta global\n",
+    "import numpy as np\n",
+    "import matplotlib as mpl\n",
+    "import matplotlib.pyplot as plt\n",
+    "from cycler import cycler\n",
+    "\n",
+    "PALETA = 'viridis'\n",
+    "COLORS = mpl.cm.get_cmap(PALETA, 10).colors  # tonos coordinados\n",
+    "\n",
+    "mpl.rcParams.update({\n",
+    "    'figure.figsize': (9, 6),\n",
+    "    'figure.dpi': 110,\n",
+    "    'axes.titlesize': 14,\n",
+    "    'axes.labelsize': 12,\n",
+    "    'xtick.labelsize': 10,\n",
+    "    'ytick.labelsize': 10,\n",
+    "    'legend.fontsize': 10,\n",
+    "    'axes.titlelocation': 'center',\n",
+    "    'axes.titleweight': 'bold',\n",
+    "    'axes.prop_cycle': cycler(color=COLORS),\n",
+    "    'figure.constrained_layout.use': True,   # gestiona espacios automáticamente\n",
+    "})\n",
+    "\n",
+    "def _wrap_labels(labels, width=22):\n",
+    "    \"\"\"Corta etiquetas largas con saltos de línea para evitar encimarse.\"\"\"\n",
+    "    import textwrap\n",
+    "    return [textwrap.fill(str(x), width=width) for x in labels]\n",
+    "\n",
+    "def _autosize(n_items, base=(9,6), step=0.35, limit=(22,16)):\n",
+    "    \"\"\"Tamaño de figura dinámico según # de elementos.\"\"\"\n",
+    "    w = min(limit[0], max(base[0], base[0] + step*(n_items-10)))\n",
+    "    h = min(limit[1], max(base[1], base[1] + step*(n_items-10)))\n",
+    "    return (w, h)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f3e99c3a",
    "metadata": {},
@@ -24,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7c9a44ae",
    "metadata": {
     "execution": {
@@ -136,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "bc51ae72",
    "metadata": {
     "execution": {
@@ -244,6 +286,25 @@
     "import numpy as np, pandas as pd, matplotlib.pyplot as plt\n",
     "from sklearn.feature_selection import mutual_info_classif\n",
     "\n",
+    "def plot_corr_heatmap(corr, titulo=\"Matriz de correlación (numéricas + objetivo)\", cmap=PALETA):\n",
+    "    # Ordena por |correlación con 'abandono'| si existe\n",
+    "    if 'abandono' in corr.columns:\n",
+    "        order = corr['abandono'].abs().sort_values(ascending=False).index\n",
+    "        corr = corr.loc[order, order]\n",
+    "\n",
+    "    n = corr.shape[0]\n",
+    "    fig, ax = plt.subplots(figsize=_autosize(n, base=(10,7)))\n",
+    "    im = ax.imshow(corr.values, vmin=-1, vmax=1, cmap=cmap, aspect='auto')\n",
+    "\n",
+    "    ax.set_xticks(range(n)); ax.set_yticks(range(n))\n",
+    "    ax.set_xticklabels(_wrap_labels(corr.columns, 18), rotation=35, ha='right')\n",
+    "    ax.set_yticklabels(_wrap_labels(corr.index, 25))\n",
+    "    ax.set_title(titulo)\n",
+    "\n",
+    "    cbar = fig.colorbar(im, ax=ax, pad=0.01, fraction=0.03)\n",
+    "    cbar.set_label('Correlación')\n",
+    "    plt.show()\n",
+    "    \n",
     "# Matriz de correlación (solo numéricas)\n",
     "num_cols = X.select_dtypes(include=[np.number]).columns.tolist()\n",
     "corr = pd.concat([X[num_cols], y], axis=1).corr()\n",
@@ -288,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9f583eb2",
    "metadata": {
     "execution": {
@@ -408,6 +469,36 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score, confusion_matrix, classification_report, RocCurveDisplay\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "def bar_series(s, titulo, ylabel=None, fmt='{:.1f}%'):\n",
+    "    s = s.sort_values(ascending=False)\n",
+    "    n = len(s)\n",
+    "    fig, ax = plt.subplots(figsize=_autosize(n, base=(9,6)))\n",
+    "    bars = ax.bar(range(n), s.values)\n",
+    "    ax.set_xticks(range(n))\n",
+    "    ax.set_xticklabels(_wrap_labels(s.index, 18), rotation=25, ha='right')\n",
+    "    ax.set_title(titulo)\n",
+    "    if ylabel: ax.set_ylabel(ylabel)\n",
+    "    # anotar\n",
+    "    for i, b in enumerate(bars):\n",
+    "        ax.text(b.get_x()+b.get_width()/2, b.get_height()*0.98, fmt.format(s.iloc[i]),\n",
+    "                ha='center', va='top')\n",
+    "    plt.show()\n",
+    "\n",
+    "def churn_por_categoria(df, col, target='abandono'):\n",
+    "    tabla = df.groupby(col)[target].mean().mul(100)  # %\n",
+    "    bar_series(tabla, f'% churn por {col}', ylabel='% churn')\n",
+    "\n",
+    "def reconstruir_categoria_desde_dummies(df, prefijo, nombre_base='base'):\n",
+    "    dums = [c for c in df.columns if c.startswith(prefijo)]\n",
+    "    out = pd.Series(nombre_base, index=df.index, dtype=object)\n",
+    "    for col in dums:\n",
+    "        cat = col.replace(prefijo, '')\n",
+    "        out = out.mask(df[col]==1, cat)\n",
+    "    return out\n",
     "\n",
     "# Split 70/30 estratificado\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
@@ -486,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "6687dca8",
    "metadata": {
     "execution": {
@@ -632,7 +723,28 @@
    "source": [
     "import numpy as np, pandas as pd, matplotlib.pyplot as plt\n",
     "from sklearn.inspection import permutation_importance\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "\n",
+    "def boxplot_gasto_vs_churn(df, gasto_col='cargos_totales', y='abandono'):\n",
+    "    data0 = df.loc[df[y]==0, gasto_col].dropna()\n",
+    "    data1 = df.loc[df[y]==1, gasto_col].dropna()\n",
+    "    fig, ax = plt.subplots(figsize=(8,5))\n",
+    "    ax.boxplot([data0, data1], labels=['Activos (0)', 'Churn (1)'], showfliers=True)\n",
+    "    ax.set_title(f'{gasto_col} vs Cancelación — Boxplot')\n",
+    "    ax.set_ylabel(gasto_col)\n",
+    "    plt.show()\n",
+    "\n",
+    "def scatter_tenencia_gasto(df, ten_col='meses_en_empresa', gasto_col='cargos_totales', y='abandono'):\n",
+    "    fig, ax = plt.subplots(figsize=(9,6))\n",
+    "    m0 = df[y]==0; m1 = df[y]==1\n",
+    "    ax.scatter(df.loc[m0, ten_col], df.loc[m0, gasto_col], alpha=0.4, s=18, label='Activos (0)')\n",
+    "    ax.scatter(df.loc[m1, ten_col], df.loc[m1, gasto_col], alpha=0.6, s=18, label='Churn (1)')\n",
+    "    ax.set_xlabel(ten_col); ax.set_ylabel(gasto_col)\n",
+    "    ax.set_title('Tenencia vs Gasto total (coloreado por churn)')\n",
+    "    ax.legend()\n",
+    "    plt.show()\n",
+    "    \n",
     "feat_names = list(X_train.columns)\n",
     "\n",
     "# Coeficientes de Regresión Logística \n",
@@ -702,13 +814,12 @@
     "  - **Método de pago** (p. ej., *electronic check*): tiende a asociarse con mayor churn.  \n",
     "\n",
     "**Recomendaciones de retención:**\n",
-    "1. Incentivar **migración a contratos anual/bianual** para clientes mensuales.  \n",
-    "2. Enfocar **onboarding y soporte proactivo** en los primeros 6 meses.  \n",
-    "3. **Revisar planes con cargos altos**; ofrecer bundles/downgrades guiados.  \n",
-    "4. **Promover pagos automáticos** (tarjeta/transferencia).  \n",
-    "5. Ofrecer **servicios protectores** (seguridad online/soporte) a segmentos de riesgo.\n",
-    "\n",
-    "> Nota: ajusta estas conclusiones con tus *tops* de coeficientes e importancias concretos de tus datos.\n"
+    "1. Incentivar migración a contratos anual/bianual para clientes mensuales.  \n",
+    "2. Enfocar onboarding y soporte proactivo en los primeros 6 meses.  \n",
+    "3. Revisar planes con cargos altos*; ofrecer bundles/downgrades guiados.  \n",
+    "4. Promover pagos automáticos (tarjeta/transferencia).  \n",
+    "5. Ofrecer servicios protectores (seguridad online/soporte) a segmentos de riesgo.\n",
+    "\n"
    ]
   }
  ],
