Fix layout: usar solo constrained_layout (sin tight_layout en heatmaps)

--- a/TelecomX_Parte2_ML.ipynb
+++ b/TelecomX_Parte2_ML.ipynb
@@ -22,14 +22,11 @@
    "outputs": [],
    "source": [
     "# Tema y paleta global\n",
-    "import numpy as np\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "from cycler import cycler\n",
-    "\n",
     "PALETA = 'viridis'\n",
-    "COLORS = mpl.cm.get_cmap(PALETA, 10).colors  # tonos coordinados\n",
-    "\n",
+    "COLORS = mpl.cm.get_cmap(PALETA, 10).colors\n",
     "mpl.rcParams.update({\n",
     "    'figure.figsize': (9, 6),\n",
     "    'figure.dpi': 110,\n",
@@ -38,10 +35,9 @@
     "    'xtick.labelsize': 10,\n",
     "    'ytick.labelsize': 10,\n",
     "    'legend.fontsize': 10,\n",
-    "    'axes.titlelocation': 'center',\n",
     "    'axes.titleweight': 'bold',\n",
     "    'axes.prop_cycle': cycler(color=COLORS),\n",
-    "    'figure.constrained_layout.use': True,   # gestiona espacios automáticamente\n",
+    "    'figure.constrained_layout.use': True,   # ← usamos SOLO constrained\n",
     "})\n",
     "\n",
     "def _wrap_labels(labels, width=22):\n",
@@ -307,10 +303,13 @@
     "    \n",
     "# Matriz de correlación (solo numéricas)\n",
     "num_cols = X.select_dtypes(include=[np.number]).columns.tolist()\n",
-    "corr = pd.concat([X[num_cols], y], axis=1).corr()\n",
+    "corr = pd.concat([X[num_cols], y.rename('abandono')], axis=1).corr()\n",
     "\n",
     "print(\"Top correlaciones con 'abandono':\")\n",
     "print(corr['abandono'].sort_values(ascending=False))\n",
+    "\n",
+    "# Heatmap ordenado y con 'constrained layout' (sin tight_layout)\n",
+    "plot_corr_heatmap(corr, titulo=\"Matriz de correlación (numéricas + objetivo)\", cmap=PALETA)\n",
     "\n",
     "# Heatmap con matplotlib\n",
     "fig, ax = plt.subplots(figsize=(10,7))\n",
