Fix: usar matplotlib.colormaps.get_cmap para paleta; sin deprecations

--- a/TelecomX_Parte2_ML.ipynb
+++ b/TelecomX_Parte2_ML.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a758f8fd",
    "metadata": {
     "execution": {
@@ -41,8 +41,9 @@
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "from cycler import cycler\n",
-    "PALETA = 'viridis'\n",
-    "COLORS = mpl.cm.get_cmap(PALETA, 10).colors\n",
+    "PALETA = 'tab10'  # o 'Set2', 'Pastel1', etc.\n",
+    "cmap   = mpl.colormaps.get_cmap(PALETA)\n",
+    "COLORS = cmap(np.linspace(0, 1, 10))\n",
     "mpl.rcParams.update({\n",
     "    'figure.figsize': (9, 6),\n",
     "    'figure.dpi': 110,\n",
