Grises + helpers de barras + heatmap anotado y fix deprecations

--- a/TelecomX_Parte2_ML.ipynb
+++ b/TelecomX_Parte2_ML.ipynb
@@ -28,17 +28,15 @@
    },
    "outputs": [],
    "source": [
-    "# Tema y paleta global \n",
+    "# === Tema global en escala de grises ===\n",
     "import numpy as np\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "from cycler import cycler\n",
     "\n",
-    "PALETA = 'Greys'  # 'Greys' ó 'gray'\n",
+    "PALETA = 'Greys'  \n",
     "cmap = mpl.colormaps.get_cmap(PALETA)\n",
-    "\n",
-    "# 8 tonos coordinados (del gris oscuro al claro)\n",
-    "COLORS = cmap(np.linspace(0.15, 0.85, 8))\n",
+    "COLORS = cmap(np.linspace(0.15, 0.85, 8))  \n",
     "\n",
     "mpl.rcParams.update({\n",
     "    'figure.figsize': (9, 6),\n",
@@ -50,9 +48,10 @@
     "    'legend.fontsize': 10,\n",
     "    'axes.titleweight': 'bold',\n",
     "    'axes.prop_cycle': cycler(color=[mpl.colors.to_hex(c) for c in COLORS]),\n",
-    "    'image.cmap': PALETA,                 # imshow/heatmap por defecto en grises\n",
-    "    'figure.constrained_layout.use': True # dejamos que Matplotlib gestione espacios\n",
+    "    'image.cmap': PALETA,                 \n",
+    "    'figure.constrained_layout.use': True \n",
     "})\n",
+    "\n",
     "\n",
     "for bar in ax.patches:\n",
     "    bar.set_edgecolor('black')\n",
@@ -123,8 +122,8 @@
     }
    ],
    "source": [
-    "import os, numpy as np, pandas as pd, matplotlib.pyplot as plt\n",
-    "from pandas.api.types import is_object_dtype, is_categorical_dtype\n",
+    "import pandas as pd\n",
+    "from pandas.api.types import is_object_dtype\n",
     "\n",
     "cat_cols = [\n",
     "    c for c in df.columns\n",
@@ -132,6 +131,7 @@
     "        is_object_dtype(df[c]) or isinstance(df[c].dtype, pd.CategoricalDtype)\n",
     "    )\n",
     "]\n",
+    "\n",
     "# Ruta del CSV tratado en la Parte 1 \n",
     "CANDIDATES = [\"telecomx_ml_ready_numeric.csv\", \"telecomx_ml_ready.csv\", \"telecomx_model_ready.csv\"]\n",
     "df = None\n",
@@ -317,20 +317,21 @@
     "from sklearn.feature_selection import mutual_info_classif\n",
     "\n",
     "def plot_corr_heatmap(corr, titulo=\"Matriz de correlación (numéricas + objetivo)\", cmap=mpl.colormaps['Greys']):\n",
-    "    # Orden por |corr con abandono| si existe\n",
+    "    # Ordenar por |corr con 'abandono'| si existe\n",
     "    if 'abandono' in corr.columns:\n",
     "        order = corr['abandono'].abs().sort_values(ascending=False).index\n",
     "        corr = corr.loc[order, order]\n",
     "\n",
     "    n = corr.shape[0]\n",
-    "    fig, ax = plt.subplots()\n",
+    "    fig, ax = plt.subplots(figsize=_autosize(n, base=(10,7)))\n",
     "    im = ax.imshow(corr.values, vmin=-1, vmax=1, cmap=cmap, aspect='auto')\n",
+    "\n",
     "    ax.set_xticks(range(n)); ax.set_yticks(range(n))\n",
-    "    ax.set_xticklabels([str(c) for c in corr.columns], rotation=35, ha='right')\n",
-    "    ax.set_yticklabels([str(r) for r in corr.index])\n",
+    "    ax.set_xticklabels(_wrap_labels(corr.columns, 18), rotation=35, ha='right')\n",
+    "    ax.set_yticklabels(_wrap_labels(corr.index, 25))\n",
     "    ax.set_title(titulo)\n",
     "\n",
-    "    # Anotar valores para no perder el signo en grises\n",
+    "    # Anotar valores para no perder el signo en escala de grises\n",
     "    for i in range(n):\n",
     "        for j in range(n):\n",
     "            v = corr.iloc[i, j]\n",
@@ -341,6 +342,10 @@
     "\n",
     "    fig.colorbar(im, ax=ax, pad=0.01, fraction=0.03, label='Correlación')\n",
     "    plt.show()\n",
+    "num_cols = X.select_dtypes(include=[np.number]).columns.tolist()\n",
+    "corr = pd.concat([X[num_cols], y.rename('abandono')], axis=1).corr()\n",
+    "plot_corr_heatmap(corr)\n",
+    "\n",
     "    \n",
     "# Matriz de correlación (solo numéricas)\n",
     "num_cols = X.select_dtypes(include=[np.number]).columns.tolist()\n",
