Agregar helpers de visualización y aplicar outline_bars(ax)

--- a/TelecomX_Parte2_ML.ipynb
+++ b/TelecomX_Parte2_ML.ipynb
@@ -52,21 +52,21 @@
     "    'figure.constrained_layout.use': True \n",
     "})\n",
     "\n",
-    "\n",
-    "for bar in ax.patches:\n",
-    "    bar.set_edgecolor('black')\n",
-    "    bar.set_linewidth(0.5)\n",
-    "\n",
+    "# === Helpers de visualización ===\n",
     "def _wrap_labels(labels, width=22):\n",
-    "    \"\"\"Corta etiquetas largas con saltos de línea para evitar encimarse.\"\"\"\n",
     "    import textwrap\n",
     "    return [textwrap.fill(str(x), width=width) for x in labels]\n",
     "\n",
     "def _autosize(n_items, base=(9,6), step=0.35, limit=(22,16)):\n",
-    "    \"\"\"Tamaño de figura dinámico según # de elementos.\"\"\"\n",
     "    w = min(limit[0], max(base[0], base[0] + step*(n_items-10)))\n",
     "    h = min(limit[1], max(base[1], base[1] + step*(n_items-10)))\n",
-    "    return (w, h)\n"
+    "    return (w, h)\n",
+    "\n",
+    "def outline_bars(ax, lw=0.6, color='black'):\n",
+    "    \"\"\"Aplica contorno fino a todas las barras del eje dado.\"\"\"\n",
+    "    for p in ax.patches:\n",
+    "        p.set_edgecolor(color)\n",
+    "        p.set_linewidth(lw)\n"
    ]
   },
   {
