Tema en escala de azules (Blues) + colores consistentes en figuras

--- a/TelecomX_Parte2_ML.ipynb
+++ b/TelecomX_Parte2_ML.ipynb
@@ -20,10 +20,10 @@
    "id": "a758f8fd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-19T00:58:58.058195Z",
-     "iopub.status.busy": "2025-08-19T00:58:58.057985Z",
-     "iopub.status.idle": "2025-08-19T00:58:58.469543Z",
-     "shell.execute_reply": "2025-08-19T00:58:58.468911Z"
+     "iopub.execute_input": "2025-08-19T01:02:02.343921Z",
+     "iopub.status.busy": "2025-08-19T01:02:02.343746Z",
+     "iopub.status.idle": "2025-08-19T01:02:02.753162Z",
+     "shell.execute_reply": "2025-08-19T01:02:02.752658Z"
     }
    },
    "outputs": [],
@@ -86,10 +86,10 @@
    "id": "7c9a44ae",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-19T00:58:58.472199Z",
-     "iopub.status.busy": "2025-08-19T00:58:58.471595Z",
-     "iopub.status.idle": "2025-08-19T00:58:58.804539Z",
-     "shell.execute_reply": "2025-08-19T00:58:58.803921Z"
+     "iopub.execute_input": "2025-08-19T01:02:02.755326Z",
+     "iopub.status.busy": "2025-08-19T01:02:02.755064Z",
+     "iopub.status.idle": "2025-08-19T01:02:03.086407Z",
+     "shell.execute_reply": "2025-08-19T01:02:03.085794Z"
     }
    },
    "outputs": [
@@ -203,10 +203,10 @@
    "id": "bc51ae72",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-19T00:58:58.806776Z",
-     "iopub.status.busy": "2025-08-19T00:58:58.806563Z",
-     "iopub.status.idle": "2025-08-19T00:59:04.061578Z",
-     "shell.execute_reply": "2025-08-19T00:59:04.060976Z"
+     "iopub.execute_input": "2025-08-19T01:02:03.088450Z",
+     "iopub.status.busy": "2025-08-19T01:02:03.088078Z",
+     "iopub.status.idle": "2025-08-19T01:02:08.389460Z",
+     "shell.execute_reply": "2025-08-19T01:02:08.388860Z"
     }
    },
    "outputs": [
@@ -487,10 +487,10 @@
    "id": "9f583eb2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-19T00:59:04.063758Z",
-     "iopub.status.busy": "2025-08-19T00:59:04.063228Z",
-     "iopub.status.idle": "2025-08-19T00:59:06.603426Z",
-     "shell.execute_reply": "2025-08-19T00:59:06.602934Z"
+     "iopub.execute_input": "2025-08-19T01:02:08.391522Z",
+     "iopub.status.busy": "2025-08-19T01:02:08.391149Z",
+     "iopub.status.idle": "2025-08-19T01:02:10.922916Z",
+     "shell.execute_reply": "2025-08-19T01:02:10.922322Z"
     }
    },
    "outputs": [
@@ -715,10 +715,10 @@
    "id": "6687dca8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-19T00:59:06.605372Z",
-     "iopub.status.busy": "2025-08-19T00:59:06.605182Z",
-     "iopub.status.idle": "2025-08-19T00:59:08.110114Z",
-     "shell.execute_reply": "2025-08-19T00:59:08.109604Z"
+     "iopub.execute_input": "2025-08-19T01:02:10.925179Z",
+     "iopub.status.busy": "2025-08-19T01:02:10.924705Z",
+     "iopub.status.idle": "2025-08-19T01:02:12.426013Z",
+     "shell.execute_reply": "2025-08-19T01:02:12.425435Z"
     }
    },
    "outputs": [
@@ -941,11 +941,11 @@
     "- **Modelos:** Regresión Logística (con normalización) y Random Forest (sin normalización).  \n",
     "- **Rendimiento:** compara Accuracy/Precision/Recall/F1/ROC AUC .  \n",
     "- **Variables clave:** según *coeficientes* (LR) e importancias (RF), destacan las relacionadas con:\n",
-    "  - **Tipo de contrato** (e.g., *month-to-month*): mayor riesgo de churn.  \n",
-    "  - **Tenencia** (*meses_en_empresa*): mayor antigüedad reduce churn.  \n",
+    "  - **Tipo de contrato** : mayor riesgo de churn.  \n",
+    "  - **Tenencia** : mayor antigüedad reduce churn.  \n",
     "  - **Cargos mensuales**: valores altos aumentan el riesgo si no hay valor percibido.  \n",
     "  - **Cargos totales**: suele ser factor protector (relacionado a lealtad).  \n",
-    "  - **Método de pago** (p. ej., *electronic check*): tiende a asociarse con mayor churn.  \n",
+    "  - **Método de pago** : tiende a asociarse con mayor churn.  \n",
     "\n",
     "**Recomendaciones de retención:**\n",
     "1. Incentivar migración a contratos anual/bianual para clientes mensuales.  \n",
